Добавляет декоративные элементы

--- a/index.html
+++ b/index.html
@@ -25,15 +25,22 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item navigation-item-search">
+        <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M18.1585 17.05L14.448 13.35C15.4508 12.05 16.1528 10.35 16.1528 8.44995C16.1528 4.04995 12.5426 0.449951 8.13013 0.449951C3.71764 0.449951 0.107422 4.14995 0.107422 8.54995C0.107422 12.95 3.71764 16.55 8.13013 16.55C9.93524 16.55 11.6401 15.95 13.044 14.85L16.7545 18.55L18.1585 17.05ZM8.13013 14.55C4.82076 14.55 2.1131 11.85 2.1131 8.54995C2.1131 5.24995 4.82076 2.54995 8.13013 2.54995C11.4395 2.54995 14.1472 5.24995 14.1472 8.54995C14.1472 11.85 11.4395 14.55 8.13013 14.55Z" fill="black"/>
+            </svg>
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item navigation-item-basket">
+        <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9.57663 17C9.27578 17 8.97493 16.9 8.77436 16.6C3.35903 10.5 2.05534 9.1 1.75449 8.7C1.0525 7.8 0.651367 6.6 0.651367 5.4C0.651367 2.4 3.05818 0 6.16698 0C7.47067 0 8.67407 0.5 9.67691 1.3C10.6797 0.5 11.9834 0 13.1868 0C16.1954 0 18.7025 2.4 18.7025 5.4C18.7025 6.7 18.201 7.9 17.3988 8.8L10.3789 16.7C10.1783 16.9 9.97776 17 9.57663 17ZM3.5596 7.5C3.86045 7.9 7.06953 11.5 9.67691 14.4L15.8945 7.4C16.3959 6.9 16.5965 6.2 16.5965 5.4C16.5965 3.6 15.0922 2.1 13.2871 2.1C12.2843 2.1 11.2815 2.6 10.5795 3.4C10.2786 3.7 9.97776 3.8 9.67691 3.8C9.37606 3.8 9.07521 3.6 8.87464 3.4C8.17265 2.6 7.16982 2.1 6.16698 2.1C4.36187 2.1 2.85761 3.6 2.85761 5.4C2.75733 6.3 3.15846 7 3.5596 7.5C3.45931 7.5 3.45931 7.5 3.5596 7.5Z" fill="black"/>
+            </svg>
+            <div class="navigation-item-basket">12</div>
             <span class="visually-hidden">
               Корзина
             </span>
@@ -68,19 +75,40 @@
         </li>
 
         <li class="rgba advantages-item">
-          <!-- <p class="advantages-picture-house"></p> -->
+          <svg class="advantages-picture-house" aria-hidden="true" focusable="false" width="76" height="73" viewBox="0 0 76 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M30.1499 65.5H46.1499V41.7H30.1499V65.5ZM33.0499 44.6H43.1499V62.6H33.0499V44.6Z" fill="#83B3D3"/>
+            <path d="M73.2499 39.8L75.3499 37.7L65.4499 27.8V0.5H51.5499V14.1L37.9499 0.5L0.649902 37.7L2.7499 39.8L10.5499 32V69.6H6.5499V72.5H70.4499V69.6H65.3499V32L73.2499 39.8ZM62.4499 69.6H13.4499V29L37.9499 4.6L62.4499 29V69.6ZM62.4499 24.9L54.5499 17V3.4H62.4499V24.9Z" fill="#83B3D3"/>
+            <path d="M30.3499 27.6C30.3499 31.9 33.8499 35.3 38.0499 35.3C42.3499 35.3 45.8499 31.8 45.8499 27.6C45.8499 23.3 42.3499 19.9 38.0499 19.9C33.8499 19.9 30.3499 23.3 30.3499 27.6ZM38.1499 22.6C40.8499 22.6 43.1499 24.8 43.1499 27.5C43.1499 30.2 40.9499 32.4 38.1499 32.4C35.4499 32.4 33.1499 30.2 33.1499 27.5C33.1499 24.8 35.3499 22.6 38.1499 22.6Z" fill="#83B3D3"/>
+            <path d="M20.5499 41.7H17.5499V45.6H20.5499V41.7Z" fill="#83B3D3"/>
+            <path d="M26.4499 41.7H23.4499V45.6H26.4499V41.7Z" fill="#83B3D3"/>
+            <path d="M20.5499 47.7H17.5499V51.6H20.5499V47.7Z" fill="#83B3D3"/>
+            <path d="M26.4499 47.7H23.4499V51.6H26.4499V47.7Z" fill="#83B3D3"/>
+            <path d="M52.4499 41.7H49.4499V45.6H52.4499V41.7Z" fill="#83B3D3"/>
+            <path d="M58.3499 41.7H55.3499V45.6H58.3499V41.7Z" fill="#83B3D3"/>
+            <path d="M52.4499 47.7H49.4499V51.6H52.4499V47.7Z" fill="#83B3D3"/>
+            <path d="M58.3499 47.7H55.3499V51.6H58.3499V47.7Z" fill="#83B3D3"/>
+          </svg>
           <h3 class="advantages-title advantages-title-with-picture">Жильё</h3>
           <p class="advantages-description advantages-description-with-picture">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в кино!</p>
         </li>
 
         <li class="advantages-item ">
-          <!-- <p class="advantages-picture-food"></p> -->
+          <svg class="advantages-picture-food" aria-hidden="true" focusable="false" width="75" height="71" viewBox="0 0 75 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M70.5499 47.2H4.7499C2.4499 47.2 0.649902 49.1 0.649902 51.5V55C0.649902 57.4 2.5499 59.3 4.7499 59.3H5.6499V60.4C5.6499 65.9 9.9499 70.5 15.2499 70.5H59.8499C65.1499 70.5 69.4499 66 69.4499 60.4V59.3H70.3499C72.6499 59.3 74.4499 57.4 74.4499 55V51.5C74.6499 49.2 72.7499 47.2 70.5499 47.2ZM66.6499 60.4C66.6499 64.3 63.6499 67.4 59.9499 67.4H15.2499C11.5499 67.4 8.5499 64.2 8.5499 60.4V59.3H66.6499V60.4ZM71.7499 55C71.7499 55.7 71.1499 56.3 70.5499 56.3H4.6499C3.9499 56.3 3.4499 55.7 3.4499 55V51.5C3.4499 50.8 4.0499 50.2 4.6499 50.2H70.4499C71.1499 50.2 71.6499 50.8 71.6499 51.5C71.7499 51.5 71.7499 55 71.7499 55Z" fill="#83B3D3"/>
+            <path d="M16.2499 38.9L21.6499 43L26.9499 38.9L32.2499 43L37.5499 38.9L42.9499 43L48.2499 38.9L53.5499 43L58.9499 38.9L64.2499 43L70.4499 38.3L68.7499 35.8L64.2499 39.2L58.9499 35.1L53.5499 39.2L48.2499 35.1L42.9499 39.2L37.5499 35.1L32.2499 39.2L26.9499 35.1L21.6499 39.2L16.2499 35.1L10.9499 39.2L6.4499 35.8L4.7499 38.3L10.9499 43L16.2499 38.9Z" fill="#83B3D3"/>
+            <path d="M8.6499 32H69.4499C69.4499 31.4 69.5499 30.8 69.5499 30.1C69.5499 29.7 69.5499 29.3 69.5499 28.9C68.8499 13.2 54.8499 0.5 37.6499 0.5C20.3499 0.5 6.3499 13.2 5.6499 29C5.6499 29.4 5.6499 29.8 5.6499 30.2C5.6499 30.8 5.6499 31.5 5.7499 32.1H8.6499V32ZM37.6499 3.5C53.2499 3.5 66.0499 14.8 66.6499 29H8.6499C9.2499 14.9 22.0499 3.5 37.6499 3.5Z" fill="#83B3D3"/>
+            <path d="M37.6499 17.8C38.6992 17.8 39.5499 16.9046 39.5499 15.8C39.5499 14.6954 38.6992 13.8 37.6499 13.8C36.6006 13.8 35.7499 14.6954 35.7499 15.8C35.7499 16.9046 36.6006 17.8 37.6499 17.8Z" fill="#83B3D3"/>
+            <path d="M29.8499 12.7C30.8992 12.7 31.7499 11.8046 31.7499 10.7C31.7499 9.59543 30.8992 8.7 29.8499 8.7C28.8006 8.7 27.9499 9.59543 27.9499 10.7C27.9499 11.8046 28.8006 12.7 29.8499 12.7Z" fill="#83B3D3"/>
+            <path d="M45.3499 12.7C46.3992 12.7 47.2499 11.8046 47.2499 10.7C47.2499 9.59543 46.3992 8.7 45.3499 8.7C44.3006 8.7 43.4499 9.59543 43.4499 10.7C43.4499 11.8046 44.3006 12.7 45.3499 12.7Z" fill="#83B3D3"/>
+          </svg>
           <h3 class="advantages-title advantages-title-with-picture">Еда</h3>
           <p class="advantages-description advantages-description-with-picture">Всегда заказывайте <br> топовый фирменный бургер, <br> вы не разочаруетесь!</p>
         </li>
 
         <li class="rgba advantages-item">
-          <!-- <p class="advantages-picture-souvenirs"></p> -->
+          <svg class="advantages-picture-souvenirs" aria-hidden="true" focusable="false" width="65" height="77" viewBox="0 0 65 77" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M61.7499 22.9467H61.6499H36.9499C50.7499 16.0467 51.8499 11.6467 51.3499 9.24674C50.1499 5.24674 45.6499 2.24674 41.3499 3.84674C35.7499 5.94674 34.2499 14.2467 32.7499 20.2467C30.7499 14.1467 28.9499 6.44674 24.5499 2.54674C23.2499 1.44674 21.4499 0.246744 18.7499 0.546744C14.7499 0.946744 8.9499 5.94674 11.2499 11.5467C13.5499 16.9467 20.9499 20.3467 25.8499 23.0467H3.8499H3.5499C1.9499 23.0467 0.649902 24.3467 0.649902 25.9467V37.2467C0.649902 38.8467 1.9499 40.1467 3.5499 40.1467H3.8499V73.4467V75.8467V76.4467H61.6499V75.9467V73.4467V40.0467H61.7499C63.3499 40.0467 64.6499 38.7467 64.6499 37.1467V25.8467C64.6499 24.2467 63.3499 22.9467 61.7499 22.9467ZM43.0499 6.34674C45.1499 6.04674 48.0499 7.64674 48.3499 9.54674C48.7499 12.3467 44.9499 14.8467 43.2499 15.9467C40.7499 17.6467 38.3499 18.5467 35.9499 20.0467C36.8499 16.3467 38.4499 7.04674 43.0499 6.34674ZM20.1499 16.3467C17.9499 14.8467 13.6499 11.9467 13.7499 8.54674C13.8499 4.94674 19.4499 1.94674 22.5499 4.64674C26.4499 8.04674 28.2499 15.7467 29.6499 21.2467C26.4499 19.7467 23.3499 18.4467 20.1499 16.3467ZM26.1499 73.4467H6.7499V40.0467H26.1499V73.4467ZM26.1499 36.9467H3.6499V25.9467H26.1499V36.9467ZM36.3499 36.9467V39.9467V73.4467H29.1499V40.0467V37.0467V26.0467H36.3499V36.9467ZM58.6499 73.4467H39.2499V40.0467H58.6499V73.4467ZM61.5499 36.9467H39.2499V25.9467H61.5499V36.9467V36.9467Z" fill="#83B3D3"/>
+          </svg>
           <h3 class="advantages-title advantages-title-with-picture">Сувениры</h3>
           <p class="advantages-description advantages-description-with-picture">Не только китайского, <br> но и настоящего местного <br> производства!</p>
         </li>
