--- a/catalog.html
+++ b/catalog.html
@@ -25,15 +25,22 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item navigation-item-search">
+        <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M18.1585 17.05L14.448 13.35C15.4508 12.05 16.1528 10.35 16.1528 8.44995C16.1528 4.04995 12.5426 0.449951 8.13013 0.449951C3.71764 0.449951 0.107422 4.14995 0.107422 8.54995C0.107422 12.95 3.71764 16.55 8.13013 16.55C9.93524 16.55 11.6401 15.95 13.044 14.85L16.7545 18.55L18.1585 17.05ZM8.13013 14.55C4.82076 14.55 2.1131 11.85 2.1131 8.54995C2.1131 5.24995 4.82076 2.54995 8.13013 2.54995C11.4395 2.54995 14.1472 5.24995 14.1472 8.54995C14.1472 11.85 11.4395 14.55 8.13013 14.55Z" fill="black"/>
+            </svg>
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item navigation-item-basket">
+        <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9.57663 17C9.27578 17 8.97493 16.9 8.77436 16.6C3.35903 10.5 2.05534 9.1 1.75449 8.7C1.0525 7.8 0.651367 6.6 0.651367 5.4C0.651367 2.4 3.05818 0 6.16698 0C7.47067 0 8.67407 0.5 9.67691 1.3C10.6797 0.5 11.9834 0 13.1868 0C16.1954 0 18.7025 2.4 18.7025 5.4C18.7025 6.7 18.201 7.9 17.3988 8.8L10.3789 16.7C10.1783 16.9 9.97776 17 9.57663 17ZM3.5596 7.5C3.86045 7.9 7.06953 11.5 9.67691 14.4L15.8945 7.4C16.3959 6.9 16.5965 6.2 16.5965 5.4C16.5965 3.6 15.0922 2.1 13.2871 2.1C12.2843 2.1 11.2815 2.6 10.5795 3.4C10.2786 3.7 9.97776 3.8 9.67691 3.8C9.37606 3.8 9.07521 3.6 8.87464 3.4C8.17265 2.6 7.16982 2.1 6.16698 2.1C4.36187 2.1 2.85761 3.6 2.85761 5.4C2.75733 6.3 3.15846 7 3.5596 7.5C3.45931 7.5 3.45931 7.5 3.5596 7.5Z" fill="black"/>
+            </svg>
+            <div class="navigation-item-basket">12</div>
             <span class="visually-hidden">
               Корзина
             </span>
@@ -120,20 +127,47 @@
     <section class="catalog-product">
     <div class="catalog-search">
       <h2 class="offers-found"> Найдено гостиниц: 38</h2>
-      <select class="select-control" aria-label="Сортировка">
-        <option value="cheap">Сначала дешёвое</option>
-        <option value="expensive">Сначала дорогое</option>
-      </select>
+      <div class= "sorting-type">
+        <!-- <svg class="svg-galochka" width="13" height="10" viewBox="0 0 13 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M11.0454 0L4.52693 7.4L1.11728 3.5L0.0141602 4.7L4.52693 9.9L12.2488 1.3L11.0454 0Z" fill="#3F5E72"/>
+        </svg> -->
+        <select class="select-control" aria-label="Сортировка">
+          <option value="cheap">Сначала дешёвое</option>
+          <option value="expensive">Сначала дорогое</option>
+        </select>
+      </div>
       <p class="catalog-button">
-      <button class="button-light" type="button">
+      <a href="#" class="card-grid-toggle card-grid-toggle-current" type="button">
         <span class="visually-hidden">Показать карточки</span>
-      </button>
-      <button class="button-light" type="button">
+        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M16 12H0V14H16V12Z" fill="black"/>
+          <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
+        </svg>
+      </a>
+      <a href="#" class="card-grid-toggle" type="button">
+        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M4 0H0V6H4V0Z" fill="black"/>
+          <path d="M16 0H12V6H16V0Z" fill="black"/>
+          <path d="M10 0H6V6H10V0Z" fill="black"/>
+          <path d="M4 8H0V14H4V8Z" fill="black"/>
+          <path d="M16 8H12V14H16V8Z" fill="black"/>
+          <path d="M10 8H6V14H10V8Z" fill="black"/>
+        </svg>
         <span class="visually-hidden">Показать ленту</span>
-      </button>
-      <button class="button-light" type="button">
+      </a>
+      <a href="#" class="card-grid-toggle" type="button">
+        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2 0H0V2H2V0Z" fill="black"/>
+          <path d="M16 0H4V2H16V0Z" fill="black"/>
+          <path d="M2 4H0V6H2V4Z" fill="black"/>
+          <path d="M16 4H4V6H16V4Z" fill="black"/>
+          <path d="M2 8H0V10H2V8Z" fill="black"/>
+          <path d="M16 8H4V10H16V8Z" fill="black"/>
+          <path d="M2 12H0V14H2V12Z" fill="black"/>
+          <path d="M16 12H4V14H16V12Z" fill="black"/>
+        </svg>
         <span class="visually-hidden">Показать список</span>
-      </button>
+      </a>
       </p>
     </div>
       
@@ -151,10 +185,18 @@
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating-star">
-            <div class="img-star"></div>
-            <div class="img-star"></div>
-            <div class="img-star"></div>
-            <div class="img-star"></div>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
             <span class="visually-hidden">4 звезды</span>
           </p>
           <b class="button rating-number">Рейтинг: 8,5</b>
@@ -172,10 +214,18 @@
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
+            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+            </svg>
             <span class="visually-hidden">4 звезды</span>
           </p>
           <b class="button rating-number">Рейтинг: 9,2</b>
