--- a/catalog.html
+++ b/catalog.html
@@ -212,7 +212,7 @@
           <p class="hotel-card-hotel">Гостиница</p>
           <b class="hotel-card-price">От 5000 ₽</b>
           <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button">в избранное</button>
+          <button class="button product-card-button product-card-button-current">в избранном</button>
           <p class="rating-star">
             <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
@@ -392,7 +392,7 @@
         </li>
       </ul>
       <p class="number-offers">Гостиниц на странице:
-        <select class="number-offers">
+        <select class="number-offers-found">
           <img src="" width="13" height="10" alt="">
           <option value="four-pic">4</option>
         </select>
