--- a/catalog.html
+++ b/catalog.html
@@ -391,12 +391,12 @@
           <a class="pagination-link" href="#">10</a>
         </li>
       </ul>
-      <p class="number-offers">Гостиниц на странице:
+      <div class="number-offers">
+        <p class="description-number-offers">Гостиниц на странице:</p>
         <select class="number-offers-found">
-          <img src="" width="13" height="10" alt="">
           <option value="four-pic">4</option>
         </select>
-      </p>
+      </div>
     </div>
     </section>
   </main>
