--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
               <path d="M18.1585 17.05L14.448 13.35C15.4508 12.05 16.1528 10.35 16.1528 8.44995C16.1528 4.04995 12.5426 0.449951 8.13013 0.449951C3.71764 0.449951 0.107422 4.14995 0.107422 8.54995C0.107422 12.95 3.71764 16.55 8.13013 16.55C9.93524 16.55 11.6401 15.95 13.044 14.85L16.7545 18.55L18.1585 17.05ZM8.13013 14.55C4.82076 14.55 2.1131 11.85 2.1131 8.54995C2.1131 5.24995 4.82076 2.54995 8.13013 2.54995C11.4395 2.54995 14.1472 5.24995 14.1472 8.54995C14.1472 11.85 11.4395 14.55 8.13013 14.55Z">
             </svg>
             <span class="visually-hidden">
-              Поиск
+              Поиск.
             </span>
           </a>
         </li>
@@ -42,7 +42,7 @@
             </svg>
             <div class="navigation-item-basket">12</div>
             <span class="visually-hidden">
-              Корзина
+              Корзина.
             </span>
           </a>
         </li>
@@ -59,14 +59,10 @@
       <h1 class="inner-header-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="index.html">
-            <img src="images/filter-content/union-home.svg" width="13" height="13" alt="Ссылка на главную страницу">
-            <span class="visually-hidden">Главная</span>
+          <a class="breadcrumbs-link breadcrumbs-link-home" href="index.html">
+            <span class="visually-hidden">Главная.</span>
           </a>
         </li>
-        <!-- <li class="breadcrumbs-item">
-          <span class="breadcrumbs-arrow"></span>
-        </li> -->
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link">Гостиницы</a>
         </li>
@@ -74,7 +70,7 @@
     </header>
 
     <section class="catalog-filter">
-      <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+      <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
       <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="catalog-filter-group">
           <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -137,36 +133,18 @@
         </select>
       </div>
       <p class="catalog-button">
-      <a href="#" class="card-grid-toggle card-grid-toggle-current" type="button">
-        <span class="visually-hidden">Показать карточки</span>
-        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M16 12H0V14H16V12Z" fill="black"/>
-          <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
-        </svg>
+
+      <a href="#" class="card-grid-toggle card-grid-toggle-current card-grid-toggle-icon-table" type="button">
+        <span class="visually-hidden">Показать карточки.</span>
+        <!-- <div class="card-grid-toggle-icon-table"></div> -->
       </a>
-      <a href="#" class="card-grid-toggle" type="button">
-        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M4 0H0V6H4V0Z" fill="black"/>
-          <path d="M16 0H12V6H16V0Z" fill="black"/>
-          <path d="M10 0H6V6H10V0Z" fill="black"/>
-          <path d="M4 8H0V14H4V8Z" fill="black"/>
-          <path d="M16 8H12V14H16V8Z" fill="black"/>
-          <path d="M10 8H6V14H10V8Z" fill="black"/>
-        </svg>
-        <span class="visually-hidden">Показать ленту</span>
+      <a href="#" class="card-grid-toggle card-grid-toggle-icon-slideshow" type="button">
+        <span class="visually-hidden">Показать ленту.</span>
+        <!-- <div class="card-grid-toggle-icon-slideshow"></div> -->
       </a>
-      <a href="#" class="card-grid-toggle" type="button">
-        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M2 0H0V2H2V0Z" fill="black"/>
-          <path d="M16 0H4V2H16V0Z" fill="black"/>
-          <path d="M2 4H0V6H2V4Z" fill="black"/>
-          <path d="M16 4H4V6H16V4Z" fill="black"/>
-          <path d="M2 8H0V10H2V8Z" fill="black"/>
-          <path d="M16 8H4V10H16V8Z" fill="black"/>
-          <path d="M2 12H0V14H2V12Z" fill="black"/>
-          <path d="M16 12H4V14H16V12Z" fill="black"/>
-        </svg>
-        <span class="visually-hidden">Показать список</span>
+      <a href="#" class="card-grid-toggle card-grid-toggle-icon-list" type="button">
+        <span class="visually-hidden">Показать список.</span>
+        <!-- <div class="card-grid-toggle-icon-list"></div> -->
       </a>
       </p>
     </div>
@@ -185,19 +163,8 @@
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating-star">
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <span class="visually-hidden">4 звезды</span>
+            <span class="star star-4"></span>
+            <span class="visually-hidden">4 звезды.</span>
           </p>
           <b class="rating-number">Рейтинг: 8,5</b>
           </div>
@@ -214,19 +181,8 @@
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button product-card-button-current">в избранном</button>
           <p class="rating-star">
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <svg class="img-star" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
-            </svg>
-            <span class="visually-hidden">4 звезды</span>
+            <span class="star star-4"></span>
+            <span class="visually-hidden">4 звезды.</span>
           </p>
           <b class="rating-number">Рейтинг: 9,2</b>
           </div>
@@ -243,10 +199,8 @@
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">3 звезды</span>
+            <span class="star star-3"></span>
+            <span class="visually-hidden">3 звезды.</span>
           </p>
           <b class="rating-number">Рейтинг: 6,9</b>
           </div>
@@ -263,9 +217,8 @@
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">2 звезды</span>
+            <span class="star star-2"></span>
+            <span class="visually-hidden">2 звезды.</span>
           </p>
           <b class="rating-number">Рейтинг: 5,0</b>
           </div>
@@ -290,7 +243,7 @@
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">4 звезды</span>
+            <span class="visually-hidden">4 звезды.</span>
           </p>
           <b class="button overall-size rating-number">Рейтинг: 8,5</b>
           </div>
@@ -315,7 +268,7 @@
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">4 звезды</span>
+            <span class="visually-hidden">4 звезды.</span>
           </p>
           <b class="button overall-size rating-number">Рейтинг: 9,2</b>
           </div>
@@ -339,7 +292,7 @@
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">3 звезды</span>
+            <span class="visually-hidden">3 звезды.</span>
           </p>
           <b class="button overall-size rating-number">Рейтинг: 6,9</b>
           </div>
@@ -362,7 +315,7 @@
           <p class="overall-size rating-star">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">2 звезды</span>
+            <span class="visually-hidden">2 звезды.</span>
           </p>
           <b class="button overall-size rating-number">Рейтинг: 5,0</b>
         </li>
@@ -409,7 +362,7 @@
       <p class="page-footer-description page-footer-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="newsletter-email">
-          <span class="visually-hidden">Email</span> 
+          <span class="visually-hidden">Email.</span> 
         </label>
         <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
           required>
@@ -419,11 +372,11 @@
 
     <div class="page-footer-container">
       <section class="footer-social">
-        <h2 class="visually-hidden">Контакты</h2>
+        <h2 class="visually-hidden">Контакты.</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="contacts" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">ВКонтакте</span>
+            <a class="footer-social-item-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте.</span>
               <svg class="footer-social-vk footer-social-icon" width="24" height="15" viewBox="0 0 24 15" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_38068_279)">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 1.448C23.616 0.902 23.45 0.5 22.655 0.5H20.03C19.362 0.5 19.054 0.847 18.887 1.23C18.887 1.23 17.552 4.426 15.661 6.502C15.049 7.104 14.771 7.295 14.437 7.295C14.27 7.295 14.019 7.104 14.019 6.557V1.448C14.019 0.792 13.835 0.5 13.279 0.5H9.151C8.734 0.5 8.483 0.804 8.483 1.093C8.483 1.714 9.429 1.858 9.526 3.606V7.404C9.526 8.237 9.373 8.388 9.039 8.388C8.149 8.388 5.984 5.177 4.699 1.503C4.45 0.788 4.198 0.5 3.527 0.5H0.9C0.15 0.5 0 0.847 0 1.23C0 1.912 0.89 5.3 4.145 9.781C6.315 12.841 9.37 14.5 12.153 14.5C13.822 14.5 14.028 14.132 14.028 13.497V11.184C14.028 10.447 14.186 10.3 14.715 10.3C15.105 10.3 15.772 10.492 17.33 11.967C19.11 13.716 19.403 14.5 20.405 14.5H23.03C23.78 14.5 24.156 14.132 23.94 13.404C23.702 12.68 22.852 11.629 21.725 10.382C21.113 9.672 20.195 8.907 19.916 8.524C19.527 8.033 19.638 7.814 19.916 7.377C19.916 7.377 23.116 2.951 23.449 1.448H23.45Z">
@@ -437,8 +390,8 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="contacts" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
+            <a class="footer-social-item-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм.</span>
               <svg class="footer-social-tg footer-social-icon" width="18" height="17" viewBox="0 0 18 17" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_38068_282)">
                 <path d="M16.7855 0.59926L0.840977 6.74775C-0.247172 7.18481 -0.240877 7.79184 0.641333 8.06253L4.73493 9.33953L14.2063 3.3637C14.6542 3.09121 15.0634 3.2378 14.727 3.53636L7.05332 10.4619H7.05152L7.05332 10.4628L6.77094 14.6823C7.18462 14.6823 7.36718 14.4925 7.5992 14.2686L9.58754 12.3351L13.7234 15.39C14.486 15.81 15.0337 15.5941 15.2234 14.6841L17.9384 1.88885C18.2163 0.774623 17.513 0.270117 16.7855 0.59926V0.59926Z" >
@@ -452,8 +405,8 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="contacts" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютуб</span>
+            <a class="footer-social-item-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб.</span>
               <svg class="footer-social-yt footer-social-icon" width="22" height="17" viewBox="0 0 22 17" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4062 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z" >
               </svg>
@@ -485,7 +438,7 @@
               <path d="M98.2 17.9C96.6 17.9 95.3 18.7 94.6 19.9H94.5C93.9 18.7 92.7 17.9 91.1 17.9C89.7 17.9 88.6 18.6 88 19.7V18.2H86.1V28.8H88.1V23.4C88.1 21.4 89.1 20 90.7 19.9C92.2 19.9 93.1 20.9 93.1 22.5V28.8H95.1V23.2C95.1 20.8 96.5 19.9 97.7 19.9C99.2 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2 17.9Z" />
               <path d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z" />
             </svg>
-          <span class="visually-hidden">.html academy</span>
+          <span class="visually-hidden">.html academy.</span>
           </a>
         </p> 
       </div>
