--- a/catalog.html
+++ b/catalog.html
@@ -406,7 +406,7 @@
         <label for="newsletter-email">
           <span class="visually-hidden">Email.</span> 
         </label>
-        <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+        <input class="field field-newsletter" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
           required>
         <button class="button newsletter-button blue-button form-button" type="submit">Подписаться</button>
       </form>
