--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
+          <a class="navigation-link navigation-icon-link" href="#">
             <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19" viewBox="0 0 19 19"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
+          <a class="navigation-link navigation-icon-link" href="#">
             <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" viewBox="0 0 19 17"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -265,13 +265,19 @@
 
           <div class="modal-form-date">
             <label class="modal-form-label" for="modal-date">Дата заезда:</label>
-            <input class="field" type="text" id="modal-date" name="modal-date" placeholder="27 апреля 2020">
+            <div class="field-content-wrapper">
+            <input class="field modal-field" type="text" id="modal-date" name="modal-date" placeholder="27 апреля 2020">
+            <div class="field-icon"></div>
+            </div>
             <p class="modal-form-description modal-form-description-error">Мы не можем отправить вас в прошлое.</p>
           </div>
 
           <div class="modal-form-date">
             <label class="modal-form-label" for="modal-date">Дата выезда:</label>
-            <input class="field" type="text" id="modal-date" name="modal-date" placeholder="1 сентября 2021">
+            <div class="field-content-wrapper">
+              <input class="field modal-field" type="text" id="modal-date" name="modal-date" placeholder="1 сентября 2021">
+              <div class="field-icon"></div>
+              </div>
             <p class="modal-form-description">На эти даты есть свободные номера. Пока есть.</p>
           </div>
 
