--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <section class="appointment">
         <h2 class="appointment-title">Заинтересовались?</h2>
         <p class="appointment-description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
-          гостиниц в Седоне</p>
+          гостиниц в Седоне&nbsp;&nbsp;</p>
         <a class="button appointment-button" href="catalog.html">Поиск Гостиницы в Седоне</a>
       </section>
     </div>
@@ -212,9 +212,7 @@
       </section>
 
       <div class="footer-contacts-address">
-        <p class="footer-contacts-address-phone">
-          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </p>
+        <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </div>
 
       <div class="footer-htmlacademy-link">
@@ -266,8 +264,9 @@
           <div class="modal-form-date">
             <label class="modal-form-label" for="modal-date">Дата заезда:</label>
             <div class="field-content-wrapper">
-            <input class="field modal-field" type="text" id="modal-date" name="modal-date" placeholder="27 апреля 2020">
-            <div class="field-icon"></div>
+              <input class="field modal-field" type="text" id="modal-date" name="modal-date"
+                placeholder="27 апреля 2020">
+              <div class="field-icon"></div>
             </div>
             <p class="modal-form-description modal-form-description-error">Мы не можем отправить вас в прошлое.</p>
           </div>
@@ -275,29 +274,37 @@
           <div class="modal-form-date">
             <label class="modal-form-label" for="modal-date">Дата выезда:</label>
             <div class="field-content-wrapper">
-              <input class="field modal-field" type="text" id="modal-date" name="modal-date" placeholder="1 сентября 2021">
+              <input class="field modal-field" type="text" id="modal-date" name="modal-date"
+                placeholder="1 сентября 2021">
               <div class="field-icon"></div>
-              </div>
+            </div>
             <p class="modal-form-description">На эти даты есть свободные номера. Пока есть.</p>
           </div>
 
           <div class="modal-form-people-wrapper">
             <label class="modal-form-people-label"> <span class="person-label-text">Взрослые:</span>
               <div class="people-counter-wrapper">
-              <button class="button-counter button-dec" type="button"><span class="visually-hidden">Уменьшить количество.</span></button>
-              <input class="field people-counter-input" type="number" placeholder="2" name="person">
-              <button class="button-counter button-inc" type="button"><span class="visually-hidden">Увеличить количество.</span></button>
+                <button class="button-counter button-dec" type="button"><span class="visually-hidden">Уменьшить
+                    количество.</span></button>
+                <input class="field people-counter-input" type="number" placeholder="2" name="person">
+                <button class="button-counter button-inc" type="button"><span class="visually-hidden">Увеличить
+                    количество.</span></button>
               </div>
             </label>
 
-            <label class="modal-form-people-label"> <div class="child-label-text">Дети:
-              <button class="tooltip-toggle" type="button">
-                <span class="tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
-              </button></div>
+            <label class="modal-form-people-label">
+              <div class="child-label-text">Дети:
+                <button class="tooltip-toggle" type="button">
+                  <span class="tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет.
+                    Дети до 6 лет размещаются бесплатно.</span>
+                </button>
+              </div>
               <div class="people-counter-wrapper">
-              <button class="button-counter button-dec" type="button"><span class="visually-hidden">Уменьшить количество.</span></button>
-              <input class="field people-counter-input" type="number" placeholder="1" name="child">
-              <button class="button-counter button-inc" type="button"><span class="visually-hidden">Увеличить количество.</span></button>
+                <button class="button-counter button-dec" type="button"><span class="visually-hidden">Уменьшить
+                    количество.</span></button>
+                <input class="field people-counter-input" type="number" placeholder="1" name="child">
+                <button class="button-counter button-inc" type="button"><span class="visually-hidden">Увеличить
+                    количество.</span></button>
               </div>
             </label>
           </div>
