--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <div class="modal-container modal-container-close">
     <div class="modal modal-auth">
       <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-      <button class="modal-close-button">
+      <button class="modal-close-button" type="button">
         <span class="visually-hidden">Закрыть</span>
       </button>
 
@@ -272,9 +272,9 @@
           </div>
 
           <div class="modal-form-date">
-            <label class="modal-form-label" for="modal-date">Дата выезда:</label>
+            <label class="modal-form-label" for="modal-date-second">Дата выезда:</label>
             <div class="field-content-wrapper">
-              <input class="field modal-field" type="text" id="modal-date" name="modal-date"
+              <input class="field modal-field" type="text" id="modal-date-second" name="modal-date-second"
                 placeholder="1 сентября 2021">
               <div class="field-icon"></div>
             </div>
@@ -308,7 +308,7 @@
               </div>
             </label>
           </div>
-          <button class="button blue-button blue-button-modal">Найти</button>
+          <button class="button blue-button blue-button-modal" type="button">Найти</button>
         </form>
       </section>
     </div>
