--- a/catalog.html
+++ b/catalog.html
@@ -149,10 +149,10 @@
 
               <div class="range-scale range-scale-opacity">
                 <div class="range-bar" style="left: 0px; width: 217px">
-                  <button class="range-toggle toggle-min">
+                  <button class="range-toggle toggle-min" type="button">
                     <span class="visually-hidden">Изменить минимальную цену.</span>
                   </button>
-                  <button class="range-toggle toggle-max">
+                  <button class="range-toggle toggle-max" type="button">
                     <span class="visually-hidden">Изменить максимальную цену.</span>
                   </button>
                 </div>
@@ -161,7 +161,7 @@
           </fieldset>
           <div class="catalog-filter-button">
             <button class="button blue-button catalog-filter-blue-button" type="submit">Применить</button>
-            <button class="catalog-filter-reset-button" type="reset">Сбросить</button>
+            <button class="catalog-filter-reset-button" type="reset" type="button">Сбросить</button>
 
           </div>
 
@@ -172,28 +172,20 @@
     <section class="catalog-product">
       <div class="catalog-search">
         <h2 class="offers-found"> Найдено гостиниц: 38</h2>
-
-        <!-- <svg class="svg-galochka" width="13" height="10" viewBox="0 0 13 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M11.0454 0L4.52693 7.4L1.11728 3.5L0.0141602 4.7L4.52693 9.9L12.2488 1.3L11.0454 0Z" fill="#3F5E72"/>
-        </svg> -->
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогое</option>
         </select>
 
         <p class="catalog-button">
-
           <a href="#" class="card-grid-toggle card-grid-toggle-current card-grid-toggle-icon-table" type="button">
             <span class="visually-hidden">Показать карточки.</span>
-            <!-- <div class="card-grid-toggle-icon-table"></div> -->
           </a>
           <a href="#" class="card-grid-toggle card-grid-toggle-icon-slideshow" type="button">
             <span class="visually-hidden">Показать ленту.</span>
-            <!-- <div class="card-grid-toggle-icon-slideshow"></div> -->
           </a>
           <a href="#" class="card-grid-toggle card-grid-toggle-icon-list" type="button">
             <span class="visually-hidden">Показать список.</span>
-            <!-- <div class="card-grid-toggle-icon-list"></div> -->
           </a>
         </p>
       </div>
@@ -211,7 +203,7 @@
               <p class="hotel-card-hotel">Гостиница</p>
               <b class="hotel-card-price">От 4000 ₽</b>
               <a class="button product-card-more" href="#">подробнее</a>
-              <button class="button product-card-button">в избранное</button>
+              <button class="button product-card-button" type="button">в избранное</button>
               <p class="rating-star">
                 <span class="star star-4"></span>
                 <span class="visually-hidden">4 звезды.</span>
@@ -230,7 +222,7 @@
               <p class="hotel-card-hotel">Гостиница</p>
               <b class="hotel-card-price">От 5000 ₽</b>
               <a class="button product-card-more" href="#">подробнее</a>
-              <button class="button product-card-button product-card-button-current">в избранном</button>
+              <button class="button product-card-button product-card-button-current" type="button">в избранном</button>
               <p class="rating-star">
                 <span class="star star-4"></span>
                 <span class="visually-hidden">4 звезды.</span>
@@ -249,7 +241,7 @@
               <p class="hotel-card-hotel">Гостиница</p>
               <b class="hotel-card-price">От 2500 ₽</b>
               <a class="button product-card-more" href="#">подробнее</a>
-              <button class="button product-card-button">в избранное</button>
+              <button class="button product-card-button" type="button">в избранное</button>
               <p class="rating-star">
                 <span class="star star-3"></span>
                 <span class="visually-hidden">3 звезды.</span>
@@ -268,7 +260,7 @@
               <p class="hotel-card-hotel">Гостиница</p>
               <b class="hotel-card-price">От 1500 ₽</b>
               <a class="button product-card-more" href="#">подробнее</a>
-              <button class="button product-card-button">в избранное</button>
+              <button class="button product-card-button" type="button">в избранное</button>
               <p class="rating-star">
                 <span class="star star-2"></span>
                 <span class="visually-hidden">2 звезды.</span>
@@ -276,103 +268,6 @@
               <b class="rating-number">Рейтинг: 5,0</b>
             </div>
           </li>
-
-          <!-- <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
-            <h3 class="product-card-title">Amara Resort & Spa</h3>
-          </a>
-          <div class="product-card-button-flex-box">
-            <p class="overall-size hotel-card-price">Гостиница</p>
-            <b class="overall-size hotel-card-price">От 4000 ₽</b>
-            </div>
-          <div class="product-card-button-flex-box">
-          <a class="button overall-size product-card-more " href="#">подробнее</a>
-          <button class="button overall-size product-card-button">в избранное</button>
-          </div>
-          <div class="product-card-button-flex-box">
-          <p class="overall-size rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">4 звезды.</span>
-          </p>
-          <b class="button overall-size rating-number">Рейтинг: 8,5</b>
-          </div>
-        </li>
-
-        <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="Гостиница вид на скалы с юга">
-            <h3 class="product-card-title">Villas at Poco Diablo</h3>
-          </a>
-          <div class="product-card-button-flex-box">
-          <p class="overall-size hotel-card-price">Гостиница</p>
-          <b class="overall-size hotel-card-price">От 5000 ₽</b>
-          </div>
-          <div class="product-card-button-flex-box">
-          <a class="button overall-size product-card-more" href="#">подробнее</a>
-          <button class="button overall-size product-card-button" type="button" checked>в избранное</button>
-          </div>
-          <div class="product-card-button-flex-box">
-          <p class="overall-size rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">4 звезды.</span>
-          </p>
-          <b class="button overall-size rating-number">Рейтинг: 9,2</b>
-          </div>
-        </li>
-
-        <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="Гостиница вид на скалы с севера">
-            <h3 class="product-card-title">Desert Quail Inn</h3>
-          </a>
-          <div class="product-card-button-flex-box">
-            <p class="overall-size hotel-card-price">Гостиница</p>
-            <b class="overall-size hotel-card-price">От 2500 ₽</b>
-            </div>
-          <div class="product-card-button-flex-box">
-          <a class="button overall-size product-card-more" href="#">подробнее</a>
-          <button class="button overall-size product-card-button" type="button">в избранное</button>
-          </div>
-          <div class="product-card-button-flex-box">
-          <p class="overall-size rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">3 звезды.</span>
-          </p>
-          <b class="button overall-size rating-number">Рейтинг: 6,9</b>
-          </div>
-        </li>
-
-        <li class="product-card">
-          <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="Гостиница вид на скалы с востока">
-            <h3 class="product-card-title">GreenTree Inn</h3>
-          </a>
-          <div class="product-card-button-flex-box">
-            <p class="overall-size hotel-card-price">Гостиница</p>
-            <b class="overall-size hotel-card-price">От 1500 ₽</b>
-            </div>
-          <div class="product-card-button-flex-box">
-          <a class="button overall-size product-card-more" href="#">подробнее</a>
-          <button class="button overall-size product-card-button" type="button">в избранное</button>
-          </div>
-          <div class="product-card-button-flex-box">
-          <p class="overall-size rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">2 звезды.</span>
-          </p>
-          <b class="button overall-size rating-number">Рейтинг: 5,0</b>
-        </li>
-        </div> -->
         </ul>
       </div>
 
@@ -406,7 +301,6 @@
       </div>
     </section>
   </main>
-
 
   <footer class="page-footer">
     <section class="newsletter catalog-newsletter">
